# uuid-cpp

./: README.md  meson.build
include/: Uuid.h  meson.build
src/: Uuid.cpp  main.cpp  meson.build
test/: meson.build  uuid_test.cpp
